--- a/dev/less/meliora.less
+++ b/dev/less/meliora.less
@@ -12,17 +12,17 @@
 
 // Global Components
 
-.mc-modal {
-  z-index: 9999 !important;
-  top: 100px !important;
+// .mc-modal {
+//   z-index: 9999 !important;
+//   top: 100px !important;
 
-}
-.mc-closeModal {
-  background: white;
-  padding: 5px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
+// }
+// .mc-closeModal {
+//   background: white;
+//   padding: 5px;
+//   border-top-right-radius: 10px;
+//   border-top-left-radius: 10px;
+// }
 
 .ion-2x {
   font-size: 2em;
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 // Global Section Styles
 
 section {
-  padding: 50px 0;
+  padding: 70px 0 50px;
   overflow: hidden;
   h2.section-heading {
   	font-size: 40px;
